// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-block--swiper"
  >
    <div
      class="t-swiper"
    >
      <div
        class="t-swiper__wrap t-swiper-inside"
      >
        <div
          class="t-swiper__content"
        >
          <div
            class="t-swiper__container"
            style="transform: translate3d(-0%, 0px, 0px); transition: transform 0.3s ease;"
          >
            <div
              class="t-swiper__container__item"
            >
              <div
                class="demo-item"
              >
                1
              </div>
            </div>
            <div
              class="t-swiper__container__item"
            >
              <div
                class="demo-item"
              >
                2
              </div>
            </div>
            <div
              class="t-swiper__container__item"
            >
              <div
                class="demo-item"
              >
                3
              </div>
            </div>
            <div
              class="t-swiper__container__item"
            >
              <div
                class="demo-item"
              >
                4
              </div>
            </div>
            <div
              class="t-swiper__container__item"
            >
              <div
                class="demo-item"
              >
                5
              </div>
            </div>
            <div
              class="t-swiper__container__item"
            >
              <div
                class="demo-item"
              >
                6
              </div>
            </div>
            <div
              class="t-swiper__container__item"
            >
              <div
                class="demo-item"
              >
                1
              </div>
            </div>
          </div>
        </div>
        <ul
          class="t-swiper__navigation t-swiper__navigation-bars"
        >
          <li
            class="t-swiper__navigation__item t-is-active"
          />
          <li
            class="t-swiper__navigation__item"
          />
          <li
            class="t-swiper__navigation__item"
          />
          <li
            class="t-swiper__navigation__item"
          />
          <li
            class="t-swiper__navigation__item"
          />
          <li
            class="t-swiper__navigation__item"
          />
        </ul>
        <div
          class="t-swiper__arrow t-swiper__arrow-default"
        >
          <div
            class="t-swiper__arrow__left"
          >
            <svg
              class="t-icon t-icon-chevron-left"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M9.54 3.54l.92.92L6.92 8l3.54 3.54-.92.92L5.08 8l4.46-4.46z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
          <div
            class="t-swiper__arrow__right"
          >
            <svg
              class="t-icon t-icon-chevron-right"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`card.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-block--swiper"
  >
    <div
      class="t-swiper"
    >
      <div
        class="t-swiper__wrap t-swiper-inside"
      >
        <div
          class="t-swiper__content t-swiper-card"
        >
          <div
            class="t-swiper__container"
            style="height: 280px;"
          >
            <div
              class="t-swiper__container__item t-swiper__card t-is-active"
              style="transform: translateX(0.00px) scale(1); transition: transform 0.3s ease; z-index: 2;"
            >
              <div
                class="demo-item"
              >
                1
              </div>
            </div>
            <div
              class="t-swiper__container__item t-swiper__card"
              style="transform: translateX(0.00px) scale(0.6325301204819277); transition: transform 0.3s ease; z-index: 1;"
            >
              <div
                class="demo-item"
              >
                2
              </div>
            </div>
            <div
              class="t-swiper__container__item t-swiper__card"
              style="transform: translateX(0.00px) scale(0.6325301204819277); transition: transform 0.3s ease; z-index: 0;"
            >
              <div
                class="demo-item"
              >
                3
              </div>
            </div>
            <div
              class="t-swiper__container__item t-swiper__card"
              style="transform: translateX(0.00px) scale(0.6325301204819277); transition: transform 0.3s ease; z-index: 0;"
            >
              <div
                class="demo-item"
              >
                4
              </div>
            </div>
            <div
              class="t-swiper__container__item t-swiper__card"
              style="transform: translateX(0.00px) scale(0.6325301204819277); transition: transform 0.3s ease; z-index: 0;"
            >
              <div
                class="demo-item"
              >
                5
              </div>
            </div>
            <div
              class="t-swiper__container__item t-swiper__card"
              style="transform: translateX(0.00px) scale(0.6325301204819277); transition: transform 0.3s ease; z-index: 1;"
            >
              <div
                class="demo-item"
              >
                6
              </div>
            </div>
          </div>
        </div>
        <ul
          class="t-swiper__navigation t-swiper__navigation-bars"
        >
          <li
            class="t-swiper__navigation__item t-is-active"
          />
          <li
            class="t-swiper__navigation__item"
          />
          <li
            class="t-swiper__navigation__item"
          />
          <li
            class="t-swiper__navigation__item"
          />
          <li
            class="t-swiper__navigation__item"
          />
          <li
            class="t-swiper__navigation__item"
          />
        </ul>
        <div
          class="t-swiper__arrow t-swiper__arrow-default"
        >
          <div
            class="t-swiper__arrow__left"
          >
            <svg
              class="t-icon t-icon-chevron-left"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M9.54 3.54l.92.92L6.92 8l3.54 3.54-.92.92L5.08 8l4.46-4.46z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
          <div
            class="t-swiper__arrow__right"
          >
            <svg
              class="t-icon t-icon-chevron-right"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`current.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-block--swiper"
  >
    <div
      class="t-swiper"
    >
      <div
        class="t-swiper__wrap t-swiper-inside"
      >
        <div
          class="t-swiper__content"
        >
          <div
            class="t-swiper__container"
            style="transform: translate3d(-0%, 0px, 0px); transition: transform 0.3s ease;"
          >
            <div
              class="t-swiper__container__item"
            >
              <div
                class="demo-item"
              >
                1
              </div>
            </div>
            <div
              class="t-swiper__container__item"
            >
              <div
                class="demo-item"
              >
                2
              </div>
            </div>
            <div
              class="t-swiper__container__item"
            >
              <div
                class="demo-item"
              >
                3
              </div>
            </div>
            <div
              class="t-swiper__container__item"
            >
              <div
                class="demo-item"
              >
                4
              </div>
            </div>
            <div
              class="t-swiper__container__item"
            >
              <div
                class="demo-item"
              >
                5
              </div>
            </div>
            <div
              class="t-swiper__container__item"
            >
              <div
                class="demo-item"
              >
                6
              </div>
            </div>
            <div
              class="t-swiper__container__item"
            >
              <div
                class="demo-item"
              >
                1
              </div>
            </div>
          </div>
        </div>
        <ul
          class="t-swiper__navigation t-swiper__navigation-bars"
        >
          <li
            class="t-swiper__navigation__item t-is-active"
          />
          <li
            class="t-swiper__navigation__item"
          />
          <li
            class="t-swiper__navigation__item"
          />
          <li
            class="t-swiper__navigation__item"
          />
          <li
            class="t-swiper__navigation__item"
          />
          <li
            class="t-swiper__navigation__item"
          />
        </ul>
      </div>
    </div>
    <div
      class="tdesign-demo-block-row"
    >
      <button
        class="t-button t-button--theme-primary t-button--variant-base t-size-s"
        type="button"
      >
        <span
          class="t-button__text"
        >
          跳转到第 2 项
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`fade.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-block--swiper"
  >
    <div
      class="t-swiper"
    >
      <div
        class="t-swiper__wrap t-swiper-inside"
      >
        <div
          class="t-swiper__content t-swiper-fade"
        >
          <div
            class="t-swiper__container"
            style="height: 0px;"
          >
            <div
              class="t-swiper__container__item t-swiper__fade"
              style="opacity: 1; transition: opacity 0.3s;"
            >
              <div
                class="demo-item"
              >
                1
              </div>
            </div>
            <div
              class="t-swiper__container__item t-swiper__fade"
              style="opacity: 0; transition: opacity 0.3s;"
            >
              <div
                class="demo-item"
              >
                2
              </div>
            </div>
            <div
              class="t-swiper__container__item t-swiper__fade"
              style="opacity: 0; transition: opacity 0.3s;"
            >
              <div
                class="demo-item"
              >
                3
              </div>
            </div>
            <div
              class="t-swiper__container__item t-swiper__fade"
              style="opacity: 0; transition: opacity 0.3s;"
            >
              <div
                class="demo-item"
              >
                4
              </div>
            </div>
            <div
              class="t-swiper__container__item t-swiper__fade"
              style="opacity: 0; transition: opacity 0.3s;"
            >
              <div
                class="demo-item"
              >
                5
              </div>
            </div>
            <div
              class="t-swiper__container__item t-swiper__fade"
              style="opacity: 0; transition: opacity 0.3s;"
            >
              <div
                class="demo-item"
              >
                6
              </div>
            </div>
            <div
              class="t-swiper__container__item t-swiper__fade"
              style="opacity: 0; transition: opacity 0.3s;"
            >
              <div
                class="demo-item"
              >
                1
              </div>
            </div>
          </div>
        </div>
        <ul
          class="t-swiper__navigation t-swiper__navigation-bars"
        >
          <li
            class="t-swiper__navigation__item t-is-active"
          />
          <li
            class="t-swiper__navigation__item"
          />
          <li
            class="t-swiper__navigation__item"
          />
          <li
            class="t-swiper__navigation__item"
          />
          <li
            class="t-swiper__navigation__item"
          />
          <li
            class="t-swiper__navigation__item"
          />
        </ul>
        <div
          class="t-swiper__arrow t-swiper__arrow-default"
        >
          <div
            class="t-swiper__arrow__left"
          >
            <svg
              class="t-icon t-icon-chevron-left"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M9.54 3.54l.92.92L6.92 8l3.54 3.54-.92.92L5.08 8l4.46-4.46z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
          <div
            class="t-swiper__arrow__right"
          >
            <svg
              class="t-icon t-icon-chevron-right"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`fraction.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-block--swiper"
  >
    <div
      class="t-swiper"
    >
      <div
        class="t-swiper__wrap t-swiper-inside"
      >
        <div
          class="t-swiper__content"
        >
          <div
            class="t-swiper__container"
            style="transform: translate3d(-0%, 0px, 0px); transition: transform 0.3s ease;"
          >
            <div
              class="t-swiper__container__item"
            >
              <div
                class="demo-item"
              >
                1
              </div>
            </div>
            <div
              class="t-swiper__container__item"
            >
              <div
                class="demo-item"
              >
                2
              </div>
            </div>
            <div
              class="t-swiper__container__item"
            >
              <div
                class="demo-item"
              >
                3
              </div>
            </div>
            <div
              class="t-swiper__container__item"
            >
              <div
                class="demo-item"
              >
                4
              </div>
            </div>
            <div
              class="t-swiper__container__item"
            >
              <div
                class="demo-item"
              >
                5
              </div>
            </div>
            <div
              class="t-swiper__container__item"
            >
              <div
                class="demo-item"
              >
                6
              </div>
            </div>
            <div
              class="t-swiper__container__item"
            >
              <div
                class="demo-item"
              >
                1
              </div>
            </div>
          </div>
        </div>
        <div
          class="t-swiper__navigation t-swiper__navigation-fraction"
        >
          <div
            class="t-swiper__arrow"
          >
            <div
              class="t-swiper__arrow__left"
            >
              <svg
                class="t-icon t-icon-chevron-left"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M9.54 3.54l.92.92L6.92 8l3.54 3.54-.92.92L5.08 8l4.46-4.46z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </div>
            <div
              class="t-swiper__navigation__text-fraction"
            >
              1/6
            </div>
            <div
              class="t-swiper__arrow__right"
            >
              <svg
                class="t-icon t-icon-chevron-right"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`placement.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-block--swiper"
  >
    <div
      class="t-swiper"
    >
      <div
        class="t-swiper__wrap t-swiper-outside"
      >
        <div
          class="t-swiper__content"
        >
          <div
            class="t-swiper__container"
            style="transform: translate3d(-0%, 0px, 0px); transition: transform 0.3s ease;"
          >
            <div
              class="t-swiper__container__item"
            >
              <div
                class="demo-item"
              >
                1
              </div>
            </div>
            <div
              class="t-swiper__container__item"
            >
              <div
                class="demo-item"
              >
                2
              </div>
            </div>
            <div
              class="t-swiper__container__item"
            >
              <div
                class="demo-item"
              >
                3
              </div>
            </div>
            <div
              class="t-swiper__container__item"
            >
              <div
                class="demo-item"
              >
                4
              </div>
            </div>
            <div
              class="t-swiper__container__item"
            >
              <div
                class="demo-item"
              >
                5
              </div>
            </div>
            <div
              class="t-swiper__container__item"
            >
              <div
                class="demo-item"
              >
                6
              </div>
            </div>
            <div
              class="t-swiper__container__item"
            >
              <div
                class="demo-item"
              >
                1
              </div>
            </div>
          </div>
        </div>
        <ul
          class="t-swiper__navigation t-swiper__navigation-bars"
        >
          <li
            class="t-swiper__navigation__item t-is-active"
          />
          <li
            class="t-swiper__navigation__item"
          />
          <li
            class="t-swiper__navigation__item"
          />
          <li
            class="t-swiper__navigation__item"
          />
          <li
            class="t-swiper__navigation__item"
          />
          <li
            class="t-swiper__navigation__item"
          />
        </ul>
        <div
          class="t-swiper__arrow t-swiper__arrow-default"
        >
          <div
            class="t-swiper__arrow__left"
          >
            <svg
              class="t-icon t-icon-chevron-left"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M9.54 3.54l.92.92L6.92 8l3.54 3.54-.92.92L5.08 8l4.46-4.46z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
          <div
            class="t-swiper__arrow__right"
          >
            <svg
              class="t-icon t-icon-chevron-right"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`vertical.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-block--swiper"
  >
    <div
      class="t-swiper"
    >
      <div
        class="t-swiper__wrap t-swiper-inside t-swiper-vertical"
      >
        <div
          class="t-swiper__content"
        >
          <div
            class="t-swiper__container"
            style="transform: translate3d(0, -0%, 0px); height: 0px; transition: transform 0.3s ease;"
          >
            <div
              class="t-swiper__container__item"
            >
              <div
                class="demo-item"
              >
                1
              </div>
            </div>
            <div
              class="t-swiper__container__item"
            >
              <div
                class="demo-item"
              >
                2
              </div>
            </div>
            <div
              class="t-swiper__container__item"
            >
              <div
                class="demo-item"
              >
                3
              </div>
            </div>
            <div
              class="t-swiper__container__item"
            >
              <div
                class="demo-item"
              >
                4
              </div>
            </div>
            <div
              class="t-swiper__container__item"
            >
              <div
                class="demo-item"
              >
                5
              </div>
            </div>
            <div
              class="t-swiper__container__item"
            >
              <div
                class="demo-item"
              >
                6
              </div>
            </div>
            <div
              class="t-swiper__container__item"
            >
              <div
                class="demo-item"
              >
                1
              </div>
            </div>
          </div>
        </div>
        <ul
          class="t-swiper__navigation t-swiper__navigation-bars"
        >
          <li
            class="t-swiper__navigation__item t-is-active"
          />
          <li
            class="t-swiper__navigation__item"
          />
          <li
            class="t-swiper__navigation__item"
          />
          <li
            class="t-swiper__navigation__item"
          />
          <li
            class="t-swiper__navigation__item"
          />
          <li
            class="t-swiper__navigation__item"
          />
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
